%%{init: {'theme':'base', 'themeVariables': {
'fontFamily':'Segoe UI, Noto Sans KR, sans-serif',
'primaryTextColor':'#0F172A',
'lineColor':'#64748B'
}}}%%
classDiagram
    class Session {
      +OnConnected()
      +OnDisconnected()
      +OnRecv(data,size)
    }

    class ClientSession {
      -weak_ptr~DBTaskQueue~ mDBTaskQueue
      +AsyncRecordConnectTime()
      +AsyncRecordDisconnectTime()
    }

    class ServerSession {
      +SetReconnectCallback(cb)
    }

    class DBServerSession {
      -unique_ptr~DBServerPacketHandler~ mPacketHandler
      +GetPacketHandler()
    }

    class TestServer {
      -shared_ptr~DBTaskQueue~ mDBTaskQueue
      -unique_ptr~IDatabase~ mLocalDatabase
      +MakeClientSessionFactory()
    }

    class DBTaskQueue {
      +Initialize(workerCount=1)
      +RecordConnectTime(sessionId,ts)
      +RecordDisconnectTime(sessionId,ts)
    }

    Session <|-- ClientSession
    Session <|-- ServerSession
    ServerSession <|-- DBServerSession

    TestServer o-- DBTaskQueue : owns
    TestServer o-- DBServerSession : owns
    TestServer ..> ClientSession : factory
    ClientSession ..> DBTaskQueue : weak_ptr lock
    DBServerSession *-- DBServerPacketHandler
